--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 /.phpunit.cache
 /node_modules
-/node_modules/*
-/public/build
-/public/hot
-/public/storage
+#/node_modules/*
+#/public/build
+#/public/hot
+#/public/storage
 /storage/*.key
 /vendor
 .env
@@ -18,13 +18,13 @@ yarn-error.log
 /.fleet
 /.idea
 /.vscode
-storage/*
-public/images/*
-public/js/*
-public/assets/*
-public/images/*
-public/vendor/*
-public/uploads/*
+#storage/*
+#public/images/*
+#public/js/*
+#public/assets/*
+#public/images/*
+#public/vendor/*
+#public/uploads/*
 
 composer.lock
 public/mix-manifest.json
